[package]
name = "skill-tts"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "TTS engine for NeuroSkill — extracted workspace crate"
build = "build.rs"

[features]
default     = []
tts-kitten  = ["dep:rlx-kittentts", "dep:rlx-runtime", "dep:rodio"]
tts-neutts  = ["dep:neutts", "dep:rodio", "dep:sha2", "dep:hound"]
# Pluggable RLX TTS engines. Legacy HF paths (Qwen3/Orpheus/Kyutai/Inflect) stay
# for auto-download UX; the full native catalog routes through `rlx-tts-bench`
# (no ONNX Runtime — `ort` features are never enabled).
tts-engines = [
    "dep:rlx-qwen3-tts",
    "dep:rlx-orpheus",
    "dep:rlx-kyutai-tts",
    "dep:rlx-inflect-nano",
    "dep:rlx-tts-bench",
    "dep:rlx-runtime",
    "dep:rodio",
    "dep:hound",
]
whisper-validate = ["dep:rlx-whisper", "dep:hound"]

[dependencies]
anyhow      = { workspace = true }
skill-constants = { path = "../skill-constants" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["sync"] }
hf-hub     = "0.5"
dirs       = "6"

rodio      = { version = "0.22", default-features = false, features = ["playback", "symphonia-wav"], optional = true }
sha2       = { version = "0.10", optional = true }
hound      = { version = "3", optional = true }

neutts     = { path = "../skill-neutts", package = "skill-neutts", features = ["espeak"], optional = true }

# KittenTTS via rlx-kittentts (native RLX graph — no ONNX Runtime).
# Windows skips the optional dep; `tts-kitten` stays in default for UX parity.
[target.'cfg(not(target_os = "windows"))'.dependencies]
rlx-kittentts = { workspace = true, features = ["espeak", "native", "hf-download"], optional = true }
rlx-whisper   = { workspace = true, features = ["tokenizer"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
rlx-runtime   = { workspace = true, features = ["cpu", "cuda", "gpu"], optional = true }
rlx-qwen3-tts = { workspace = true, features = ["hf-download", "cuda", "gpu"], optional = true }
rlx-orpheus   = { workspace = true, features = ["llama", "hf-download", "cuda", "gpu"], optional = true }
rlx-kyutai-tts = { workspace = true, features = ["hf-download", "cuda", "gpu"], optional = true }
rlx-inflect-nano = { workspace = true, features = ["rlx-graph", "cuda", "gpu"], optional = true }
# Native catalog (no ort). `matrix-native` + AR + LM + kyutai + rlx-tts.
rlx-tts-bench = { workspace = true, features = ["rlx-tts", "matrix-onnx", "matrix-ar", "lm-tts", "kyutai", "cuda", "gpu"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
neutts = { path = "../skill-neutts", package = "skill-neutts", features = ["espeak", "metal"], optional = true }
rlx-kittentts = { workspace = true, features = ["espeak", "native", "hf-download", "metal"], optional = true }
rlx-runtime   = { workspace = true, features = ["cpu", "metal"], optional = true }
rlx-whisper   = { workspace = true, features = ["tokenizer"], optional = true }
rlx-qwen3-tts = { workspace = true, features = ["hf-download", "metal"], optional = true }
rlx-orpheus   = { workspace = true, features = ["llama", "hf-download", "metal", "coreml"], optional = true }
rlx-kyutai-tts = { workspace = true, features = ["hf-download", "metal"], optional = true }
rlx-inflect-nano = { workspace = true, features = ["rlx-graph", "metal"], optional = true }
# `matrix-onnx` is a deprecated alias for native RLX engines (no `ort`).
rlx-tts-bench = { workspace = true, features = ["rlx-tts", "matrix-onnx", "matrix-ar", "lm-tts", "kyutai", "metal"], optional = true }

[lints]
workspace = true

[[bin]]
name = "kitten-e2e"
path = "src/bin/kitten_e2e.rs"
required-features = ["tts-kitten", "whisper-validate"]
